--- a/sample/res/layout/item_grid_image.xml
+++ b/sample/res/layout/item_grid_image.xml
@@ -1,29 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="match_parent"
-	android:layout_height="120dip">
+    android:layout_width="match_parent"
+    android:layout_height="160dip">
 
 
-	<ImageView
-		android:id="@+id/image"
-		android:layout_width="match_parent"
-		android:layout_height="120dip"
-		android:adjustViewBounds="true"
-		android:contentDescription="@string/descr_image"
-		android:scaleType="centerCrop" />
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="120dip"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/descr_image"
+        android:scaleType="centerCrop" />
 
-	<ProgressBar
-		android:id="@+id/progress"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:indeterminate="false"
-		android:max="100"
-		android:layout_gravity="bottom"
-		style="@style/ProgressBarStyle" />
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="false"
+        android:max="100"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="30dip"
+        style="@style/ProgressBarStyle" />
     <ImageView
         android:id="@+id/playicon"
         android:layout_width="match_parent"
         android:layout_height="120dip"
-        android:padding="10dp"
+        android:padding="15dp"
         android:src="@drawable/ic_play"/>
+    <TextView
+        android:id="@+id/desc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:textAlignment="center"
+        android:clickable="false"
+        android:gravity="center"
+        android:textSize="25dp"
+        android:text="万科TV"
+        />
 </FrameLayout>
